<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.linkshortener.screens.LinkShortenerView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:background="@color/background_header">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtURLShorten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="text"
                android:autofillHints="username"
                android:hint="@string/type_url"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnShorten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shorten"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_style"
                android:textAllCaps="false"/>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/pbSearch"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:background="@color/light_gray"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                android:text="@string/links_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lsLinksShorted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:listitem="@layout/link_item_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</layout>